<resources>
    <string name="app_name">El7a2</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="font_name_helvatican">Helvatican</string>
    <string name="error_msg">خطأ في الإتصال</string>
    <string name="btn_retry">إعادة المحاولة</string>
    <string name="error_msg_unknown">خطأ غير معروف</string>
    <string name="error_msg_timeout">عفوا انتهى وقت الاتصال دون استجابة</string>
    <string name="error_msg_no_internet">تحقق من اتصالك بالشبكة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tap_to_reload">إعادة المحاولة</string>
    <string name="what_rong">حصل خطأ ما</string>
    <string name="conn_error_recyview">خطأ في الإتصال بالشبكة</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">131002647770788</string>
    <string name="fb_login_protocol_scheme">fb131002647770788</string>
    <string name="skip_ad">تخطي الإعلان</string>
    <string name="day_sample">ي</string>
    <string name="hours_sample">س</string>
    <string name="monutes_sample">د</string>
    <string name="seconds_sample">ث</string>
    <string name="sublement">ملحق العرض</string>
    <string name="hint_full_name">الإسم بالكامل</string>
    <string name="hint_mob_num">رقم الهاتف</string>
    <string name="hint_email">البريد الألكترونى</string>
    <string name="btn_update_profile">تحديث الملف الشخصي</string>
    <string name="btn_reset_password">إعادة ضبط كلمة المرور</string>
</resources>
