<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.editprofile.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"

        app:cardCornerRadius="2dp"
        app:cardBackgroundColor="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            >



            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_full_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/grey_color_accent">

                    <com.ibtikartechs.apps.el7a2.ui_utilities.CustomFontEditText
                        android:id="@+id/et_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_full_name"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textCursorDrawable="@null"
                        app:custom_font_edi_text="@string/font_name_helvatican" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:id="@+id/input_layout_mob_number"
                    style="@style/grey_color_accent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/grey_color_accent">

                    <com.ibtikartechs.apps.el7a2.ui_utilities.CustomFontEditText
                        android:id="@+id/et_mob_num"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_mob_num"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        app:custom_font_edi_text="@string/font_name_helvatican" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:theme="@style/grey_color_accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                <com.ibtikartechs.apps.el7a2.ui_utilities.CustomFontEditText
                    android:id="@+id/et_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:text="ahmedyehya1992@gmail.com"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/placeholder_grey"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@null"
                    app:custom_font_edi_text="@string/font_name_helvatican" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_button_blue"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                >
                <com.ibtikartechs.apps.el7a2.ui_utilities.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:custom_font="@string/font_name_helvatican"
                    android:text="@string/btn_update_profile"
                    />


            </LinearLayout>
            <com.ibtikartechs.apps.el7a2.ui_utilities.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:custom_font="@string/font_name_helvatican"
                android:textColor="@color/white_blue"
                android:text="@string/btn_reset_password"
                android:drawableStart="@drawable/ic_action_password_drawable"
                android:drawableLeft="@drawable/ic_action_password_drawable"
                android:drawablePadding="10dp"
                android:layout_marginBottom="24dp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>